# couch-rs

./: .env  .env.fish  .gitignore  .rustfmt.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  check.sh  deny.toml  docker-compose.yml  test.sh
.github/workflows/: rust.yml
couch_rs/: Cargo.toml
couch_rs/examples/async_batch_read/: main.rs
couch_rs/examples/basic_operations/: main.rs
couch_rs/examples/typed_documents/: main.rs
couch_rs/examples/typed_views/: main.rs
couch_rs/src/: changes.rs  client.rs  database.rs  document.rs  error.rs  lib.rs  management.rs  model.rs  typed.rs
couch_rs/src/types/: changes.rs  design.rs  design_info.rs  document.rs  find.rs  index.rs  mod.rs  query.rs  system.rs  view.rs
couch_rs_derive/: Cargo.toml
couch_rs_derive/src/: lib.rs
examples/async_batch_read/: main.rs
examples/basic_operations/: main.rs
examples/typed_documents/: main.rs
src/: client.rs  database.rs  document.rs  error.rs  lib.rs  model.rs
src/types/: design.rs  document.rs  find.rs  index.rs  mod.rs  query.rs  system.rs  view.rs
