[package]
name = "sofa"
version = "0.8.0"
authors = ["Mathieu Amiot <mathieu.amiot@yellowinnovation.fr>", "mibes <mibes@mibesco.com>"]
license = "MIT/Apache-2.0"
description = "Sofa - CouchDB for Rust"
readme = "README.md"
documentation = "https://docs.rs/sofa"
homepage = "https://github.com/YellowInnovation/sofa"
repository = "https://github.com/YellowInnovation/sofa"
keywords = ["couchdb", "orm", "database", "nosql"]
categories = ["database"]
edition = "2018"
include = [
    "**/*.rs",
    "Cargo.toml"
]

[dependencies]
serde = { version = "^1.0.114", features = ["derive"] }
serde_json = "^1.0.56"
url = "^2.1.1"
tokio = { version = "^0.2.22", features = ["full"] }

[dependencies.reqwest]
version = "^0.10.7"
features = ["json", "gzip", "cookies"]

[dev-dependencies]
pretty_assertions = "^0.6.1"
tokio = { version = "^0.2.22", features = ["full"] }
