[package]
name = "couch_rs"
version = "0.8.8"
authors = ["Mathieu Amiot <mathieu.amiot@yellowinnovation.fr>", "mibes <mibes@mibesco.com>"]
license = "MIT/Apache-2.0"
description = "CouchDB library for Rust"
readme = "README.md"
documentation = "https://docs.rs/couch_rs"
repository = "https://github.com/mibes/couch-rs"
keywords = ["couchdb", "orm", "database", "nosql"]
categories = ["database"]
edition = "2018"
include = [
    "**/*.rs",
    "Cargo.toml"
]

[dependencies]
serde = { version = "^1.0.116", features = ["derive"] }
serde_json = "^1.0.57"
url = "^2.1.1"
tokio = { version = "^0.2.22", features = ["rt-core"] }

[dependencies.reqwest]
version = "^0.10.8"
features = ["json", "gzip", "cookies"]

[dev-dependencies]
pretty_assertions = "^0.6.1"
tokio = { version = "^0.2.22", features = ["rt-core", "macros"] }
