[package]
name = "couch_rs"
version = "0.8.35"
authors = ["Mathieu Amiot <mathieu.amiot@yellowinnovation.fr>", "mibes <mibes@mibesco.com>"]
license = "MIT/Apache-2.0"
description = "CouchDB library for Rust"
readme = "README.md"
documentation = "https://docs.rs/couch_rs"
repository = "https://github.com/mibes/couch-rs"
keywords = ["couchdb", "orm", "database", "nosql"]
categories = ["database"]
edition = "2018"
include = [
    "**/*.rs",
    "Cargo.toml"
]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
couch_rs_derive = { version = "0.8.35", optional = true, path = "../couch_rs_derive" }
url = "2"
tokio = { version = "1", features = ["rt-multi-thread"] }
base64 = "0.13"
tokio-util = "0.6"
bytes = "1"
tokio-stream = { version = "0.1", features = ["io-util"] }
futures-util = "0.3"
futures-core = "0.3"

[dependencies.reqwest]
version = "0.11"
features = ["json", "gzip", "stream"]
default-features = false

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[features]
default = ["derive", "native-tls"]

# Provide derive(CouchDocument) macros.
derive = ["couch_rs_derive"]

# tls backend, copied from reqwest
native-tls = ["reqwest/native-tls"]
native-tls-alpn = ["reqwest/native-tls-alpn"]
native-tls-vendored = ["reqwest/native-tls-vendored"]
rustls-tls = ["reqwest/rustls-tls"]
rustls-tls-manual-roots = ["reqwest/rustls-tls-manual-roots"]
rustls-tls-webpki-roots = ["reqwest/rustls-tls-webpki-roots"]
rustls-tls-native-roots = ["reqwest/rustls-tls-native-roots"]
