[package]
name = "couch_rs"
version = "0.10.0"
authors = [
    "Mathieu Amiot <mathieu.amiot@yellowinnovation.fr>",
    "mibes <mibes@mibesco.com>",
]
license = "MIT/Apache-2.0"
description = "CouchDB library for Rust"
readme = "README.md"
documentation = "https://docs.rs/couch_rs"
repository = "https://github.com/mibes/couch-rs"
keywords = ["couchdb", "orm", "database", "nosql"]
categories = ["database"]
edition = "2021"
include = ["**/*.rs", "Cargo.toml"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
couch_rs_derive = { version = "0.10.0", optional = true, path = "../couch_rs_derive" }
url = "2"
tokio = { version = "^1.32", features = ["rt-multi-thread"] }
base64 = "0.22"
tokio-util = { version = "0.7", features = ["io"] }
bytes = "1"
tokio-stream = { version = "0.1", features = ["io-util"] }
futures-util = "0.3"
futures-core = "0.3"
percent-encoding = "2"

[dependencies.reqwest]
version = "0.12"
features = ["json", "gzip", "stream"]
default-features = false

[dev-dependencies]
tokio = { version = "^1.32", features = ["rt-multi-thread", "macros"] }
http = { version = "1.1" }

[features]
default = ["derive", "native-tls"]
integration-tests = []

# Provide derive(CouchDocument) macros.
derive = ["couch_rs_derive"]

# tls backend, copied from reqwest
native-tls = ["reqwest/native-tls"]
native-tls-alpn = ["reqwest/native-tls-alpn"]
native-tls-vendored = ["reqwest/native-tls-vendored"]
rustls-tls = ["reqwest/rustls-tls"]
rustls-tls-manual-roots = ["reqwest/rustls-tls-manual-roots"]
rustls-tls-webpki-roots = ["reqwest/rustls-tls-webpki-roots"]
rustls-tls-native-roots = ["reqwest/rustls-tls-native-roots"]

[lib]
doctest = false
